Small fixes & housekeeping.

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = rpmrebuild
-url = http://downloads.sourceforge.net/rpmrebuild/rpmrebuild-2.16.tar.gz
+url = https://iweb.dl.sourceforge.net/project/rpmrebuild/rpmrebuild/2.16/rpmrebuild-2.16.tar.gz
 archives = 
 giturl = https://github.com/rpm-software-management/rpm.git
 domain = RPM
@@ -22,6 +22,8 @@ allow_test_failures = false
 altcargo1 = false
 # enable cargo local with full lto
 altcargo1_lto = false
+# enable cargo local with pgo
+altcargo_pgo = false
 # alternative pgo flags
 altflags_pgo = false
 # alternative pgo 32bits flags
