Small fixes & housekeeping.

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = rpmrebuild
-url = https://iweb.dl.sourceforge.net/project/rpmrebuild/rpmrebuild/2.16/rpmrebuild-2.16.tar.gz
+url = https://phoenixnap.dl.sourceforge.net/project/rpmrebuild/rpmrebuild/2.16/rpmrebuild-2.16.tar.gz
 archives = 
 giturl = https://github.com/rpm-software-management/rpm.git
 domain = RPM
