Small fixes & housekeeping.

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = rpmrebuild
-url = https://phoenixnap.dl.sourceforge.net/project/rpmrebuild/rpmrebuild/2.16/rpmrebuild-2.16.tar.gz
+url = file:///aot/build/clearlinux/packages/rpmrebuild/rpmrebuild-v2.16.tar.gz
 archives = 
 giturl = https://github.com/rpm-software-management/rpm.git
 domain = RPM
@@ -24,6 +24,8 @@ altcargo1 = false
 altcargo1_lto = false
 # enable cargo local with pgo
 altcargo_pgo = false
+# enable cargo local with instrumented sampling bolt
+altcargo_sample_bolt = false
 # alternative pgo flags
 altflags_pgo = false
 # alternative pgo 32bits flags
